<resources>
    <string name="app_name">Sample Constraint Layout</string>
    <string name="tEmail">Email:</string>
    <string name="tPassword">Password:</string>
    <string name="bsignin">Sign-in</string>
    <string name="tData">Data Anda</string>
    <string name="txEmail">Ini hasil email </string>
    <string name="txPassword">Ini hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="Idaftar">Daftar</string>
    <string name="eNama">Masukan Nama</string>
    <string name="eEmail">Masukan Email</string>
    <string name="epass">Masukan Password</string>
    <string name="erapass">Masukan Password Kembali</string>
    <string name="eAlamat">Masukan Alamat</string>
</resources>