<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Idaftar"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.113"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="15pt"/>

    <EditText
        android:id="@+id/edNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        android:ems="10"
        android:hint="@string/eNama"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/edAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edNama"
        android:ems="10"
        android:hint="@string/eAlamat"
        android:inputType="textMultiLine|text"/>

    <EditText
        android:id="@+id/EdEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edAlamat"
        android:ems="10"
        android:hint="@string/eEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EdEmail"
        android:ems="10"
        android:hint="@string/epass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edrepas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.19"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edpass"
        android:ems="10"
        android:hint="@string/erapass"
        android:inputType="textPassword" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/febSimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edrepas"
        app:layout_constraintVertical_bias="0.404"
        app:srcCompat="@android:drawable/ic_menu_save" />
</androidx.constraintlayout.widget.ConstraintLayout>